samples/_failures_safe/1761490670_300c8a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54213f67.c: In function ‘main’:
./samples/SAFE/__tmp_54213f67.c:158:37: error: expected ‘)’ at end of input
  158 |     for (int i = 0; i < log_count; i
      |         ~                           ^
      |                                     )
./samples/SAFE/__tmp_54213f67.c:158:5: error: expected declaration or statement at end of input
  158 |     for (int i = 0; i < log_count; i
      |     ^~~
